Fixed the title overflow, added scrolling when title is too long

--- a/style.css
+++ b/style.css
@@ -337,10 +337,11 @@ button {
 }
 
 .note-editor-title {
+  width: 100%;
+  overflow-x: auto;
   font-size: 2rem;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  overflow-x: scroll;
 }
 
 .note-editor-title:empty:before {
